# supertuxkart

./: .gitignore  CMakeLists.txt
data/karts/adiumy/: adiumy.spm  hc.propeller.spm  headlight.spm  kart.xml  licenses.txt  materials.xml  wheel-front-right.spm  wheel-rear-right.spm
data/karts/amanda/: licenses.txt  materials.xml
data/karts/beastie/: beastie.spm  headlight_1.spm  headlight_2.spm  kart.xml  licenses.txt  materials.xml  wheel-rear-right.spm
data/karts/emule/: emule.spm  headlight_1.spm  headlight_2.spm  headlight_cone.spm  kart.xml  licenses.txt  materials.xml  wheel-front-left.spm  wheel-front-right.spm  wheel-rear-left.spm  wheel-rear-right.spm
data/karts/gnu/: Carpet.spm  arabic_lantern.spm  gnu.spm  kart.xml  licenses.txt  materials.xml
data/karts/hexley/: Vehicle.Dashboard.Needle.spm  Vehicle.Lightbulb.spm  hexley.spm  kart.xml  materials.xml  wheel-front-right.spm  wheel-rear-left.spm
data/karts/kiki/: headlight.spm  kart.xml  kiki.spm  kiki_tail.spm  licenses.txt  materials.xml  paintbrush.spm  wheel-front-right.spm  wheel-rear-right.spm
data/karts/konqi/: License.txt  headlight.spm  kart.xml  konqi.spm  licenses.txt  materials.xml  wheel-front-left.spm  wheel-front-right.spm  wheel-rear-left.spm  wheel-rear-right.spm
data/karts/nolok/: headlight.spm  licenses.txt  materials.xml  nolok.spm  wheel-front-left.spm  wheel-front-right.spm  wheel-rear-left.spm  wheel-rear-right.spm
data/karts/pidgin/: headlight_1.spm  headlight_2.spm  kart.xml  licenses.txt  materials.xml  pidgin.spm  wheel-front-left.spm  wheel-front-right.spm  wheel-rear-left.spm  wheel-rear-right.spm
data/karts/puffy/: kart.xml  licenses.txt  materials.xml  puffy.spm  wheel-front-left.spm  wheel-front-right.spm  wheel-rear-left.spm  wheel-rear-right.spm
data/karts/sara_the_racer/: exhaust.spm  headlight_1.spm  headlight_2.spm  kart.xml  licenses.txt  materials.xml  sara the racer.spm  wheel-front-right.spm  wheel-rear-left.spm  wheel-rear-right.spm
data/karts/sara_the_wizard/: headlight.spm  kart.xml  licenses.txt  materials.xml  sara the wizard.spm  speed_weight_object.spm  wheel-front-left.spm  wheel-front-right.spm  wheel-rear-left.spm  wheel-rear-right.spm
data/karts/suzanne/: licenses.txt
data/karts/xue/: hc.propeller.spm  headlight.spm  kart.xml  licenses.txt  materials.xml  xue.spm
data/models/: banana-low.spm  banana.spm  bowling.spm  bubblegum-low.spm  bubblegum.spm  cake.spm  chest.spm  christmas_hat.spm  easter_ears.spm  easter_egg.spm  gift-box-low.spm  gift-box.spm  licenses.txt  materials.xml  nitrotank-big-low.spm  nitrotank-big.spm  nitrotank-small-low.spm  nitrotank-small.spm  parachute.spm  plunger.spm  reset-button.spm  swatter.spm  swatter_anim.spm  swatter_nolok.spm  trophy_bronze.spm  trophy_gold.spm  trophy_silver.spm
data/textures/: License.txt  licenses.txt  materials.xml  stk_metalRustedBlue_a  textures.xml
data/textures/deprecated/: materials.xml
data/tracks/abyss/: big_windows_temple.spm  entrace_windows_temple.spm  limit-mainbuilding.spm  materials.xml  quads.xml  restaurant-distortion.spm  scene.xml  sea-surface.spm  starting_sign.spm  submarine_sphere_a.spm  water-pond-distortion.spm  water_flow_minor_a.spm  windows_restaurant.spm
data/tracks/battleisland/: Water.spm  battleisland_track.spm  licenses.txt  materials.xml  navmesh.xml  scene.xml  track.xml
data/tracks/candela_city/: SomeModel.spm  car_traffic.spm  caracalla_waterfall.spm  clockWork_a.spm  clockWork_b.spm  elevator_a1.spm  elevator_a2.spm  gondola.spm  graph.xml  quads.xml  scene.xml  start_sign.spm  toy_train.spm  track.xml  volcano_static.spm  water_canal.spm  water_sea.spm
data/tracks/cave/: cave_track.spm  licenses.txt  materials.xml  navmesh.xml  scene.xml  track.xml
data/tracks/cocoa_temple/: big_jump_pad.spm  big_jump_pad_reverse.spm  boundaries.spm  cocoa_shredder.spm  cocoa_snake.spm  cocoa_temple_track.spm  easter_eggs.xml  hotChocolate.spm  materials.xml  nitro_platform.spm  nitro_platform_zipper.spm  quads.xml  reset_plane.spm  reset_plane_falling.spm  roaster_displacement.spm  scene.xml  start_text.spm  track.xml  water_pond.spm  water_river_distord.spm  wooden_bridge.spm  zipper_animation.spm  zipper_animation_reverse.spm
data/tracks/cornfield_crossing/: cornfield_crossing_track.spm  limit.spm  materials.xml  mud_water.spm  quads.xml  rails_plane.spm  ramp_1_rev.spm  ramp_2_non_rev.spm  (+4 more)
pykart/: CMakeLists.txt  __init__.py  __main__.py  pykart.cpp
src/: main.cpp  main_loop.cpp  main_loop.hpp  pykart_controller.h
src/animations/: three_d_animation.cpp
src/challenges/: unlock_manager.cpp  unlock_manager.hpp
src/config/: stk_config.cpp  stk_config.hpp
src/graphics/: camera.cpp  camera_normal.cpp  explosion.cpp  explosion.hpp  hit_sfx.cpp  hit_sfx.hpp  material.cpp  material.hpp  shader_files_manager.cpp  weather.cpp
src/guiengine/: event_handler.cpp  screen.hpp
src/io/: file_manager.cpp  file_manager.hpp
src/items/: attachment.cpp  attachment.hpp  bowling.cpp  bowling.hpp  plunger.cpp  powerup.cpp  powerup.hpp  rubber_ball.cpp  rubber_ball.hpp  swatter.cpp  swatter.hpp
src/karts/: explosion_animation.cpp  kart.cpp  kart.hpp  kart_properties.cpp  kart_properties.hpp
src/modes/: cutscene_world.cpp  follow_the_leader.cpp  linear_world.cpp  linear_world.hpp  overworld.cpp  soccer_world.cpp  soccer_world.hpp  three_strikes_battle.cpp  world.cpp  world_status.cpp  world_status.hpp
src/scriptengine/: script_audio.cpp
src/states_screens/: create_server_screen.cpp  feature_unlocked.cpp  feature_unlocked.hpp  gp_info_screen.cpp  grand_prix_editor_screen.cpp  grand_prix_lose.cpp  grand_prix_win.cpp  grand_prix_win.hpp  kart_selection.cpp  network_kart_selection.cpp  online_profile_servers.cpp  online_user_search.cpp  options_screen_audio.cpp  options_screen_ui.cpp  options_screen_video.cpp  race_gui_base.cpp  race_result_gui.cpp  race_result_gui.hpp  register_screen.cpp  server_selection.cpp  soccer_setup_screen.cpp  state_manager.cpp  user_screen.cpp
src/tracks/: track.cpp  track_object_presentation.cpp  track_object_presentation.hpp
(+491 files in other folders)
